--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -106,7 +106,7 @@
 
 .dropdown {
   position: absolute;
-  height: 50px;
+  height: 40px;
   width: 100%;
   -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
@@ -115,11 +115,11 @@
 
 .dropdown-menu {
   position: relative;
-  top: 50px;
+  top: 40px;
   margin: auto;
   margin-top: 15px;
   width: 80%;
-  height: 350px;
+  height: 340px;
   display: none;
 }
 
@@ -129,7 +129,7 @@
 
 .dropdown-line {
   position: relative;
-  top: 49px;
+  top: 39px;
   margin: auto;
   width: 100%;
   
@@ -161,8 +161,8 @@
 }
 
 .dropdown-menu a p {
-  font-weight: 400;
-  font-size: 17px;
+  font-weight: 410;
+  font-size: 18px;
   margin: 0;
 }
 
@@ -174,6 +174,9 @@
 }
 
 @media screen and (min-width: 0px) and (max-width: 600px) {
+  .navigation {
+    height: 40px;
+  }
   .navigation-choice {
     display: none;
   }
@@ -184,5 +187,8 @@
     position: absolute;
     width: 100%;
     text-align: center;
+    height: 40px;
+    line-height: 40px;
+    font-size: 30px;
   }
 }
