--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -39,7 +39,12 @@
   line-height: 25px;
   text-align: center;
   border-radius: 30px;
-  background: rgb(150, 24, 189);
+  background-image: linear-gradient(
+    to right,
+    rgb(222, 120, 252, 1),
+    rgb(126, 69, 255, 1),
+    rgb(54, 131, 231)
+  );
   float: left;
 }
 
