--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -63,26 +63,28 @@
 
 .choice:hover {
   line-height: 46px;
-  border-top: 2px solid #ffffff;
   border-bottom: 2px;
 }
 
-.choice-focused {
-  line-height: 46px;
+.choice-home:hover {
   border-top: 2px solid #ffffff;
-  border-bottom: 2px;
 }
 
-.unhome-choice {
-  color: #262626;
-}
-
-.unhome-choice:hover {
+.choice-study:hover {
   border-top: 2px solid #40a9ff;
   color: #40a9ff;
 }
 
-.unhome-focused {
+.choice-focused {
+  line-height: 46px;
+  border-bottom: 2px;
+}
+
+.choice-focused-home{
+  border-top: 2px solid #ffffff;
+}
+
+.choice-focused-study{
   border-top: 2px solid #40a9ff;
   color: #40a9ff;
 }
@@ -132,7 +134,7 @@
   top: 39px;
   margin: auto;
   width: 100%;
-  
+
   display: none;
 }
 
@@ -149,14 +151,13 @@
   margin-bottom: 11px;
   border: none;
   height: 1px;
-  
 }
 
-.dropdown-menu-white hr{
+.dropdown-menu-white hr {
   background-color: rgba(223, 223, 223, 0.548);
 }
 
-.dropdown-menu-black hr{
+.dropdown-menu-black hr {
   background-color: rgb(255, 255, 255);
 }
 
