--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -40,8 +40,7 @@
   text-align: center;
   border-radius: 30px;
   background-image: linear-gradient(
-    to right,
-    rgb(222, 120, 252, 1),
+    -45deg,
     rgb(126, 69, 255, 1),
     rgb(54, 131, 231)
   );
