--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
   position: fixed;
-  border-right: 1px solid #f3f3f3;
-  height: 85%;
-  width: 16%;
+  /* border-right: 1px solid #f3f3f3; */
+  height: 80%;
+  width: 280px;
   overflow: auto;
   font-size: 14px;
 }
