--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@
 @import url("font.css");
 @import url("menu.css");
 @import url("test.css");
+@import url("note-content.css");
 
 html,
 body,
@@ -519,803 +520,14 @@ form {
   padding-top: 100px;
 }
 
-@media screen and (max-width: 1680px) {
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    align-items: stretch;
-  }
-
-  .row > * {
-    box-sizing: border-box;
-  }
-
-  .row.gtr-uniform > * > :last-child {
-    margin-bottom: 0;
-  }
-
-  .row.aln-left {
-    justify-content: flex-start;
-  }
-
-  .row.aln-center {
-    justify-content: center;
-  }
-
-  .row.aln-right {
-    justify-content: flex-end;
-  }
-
-  .row.aln-top {
-    align-items: flex-start;
-  }
-
-  .row.aln-middle {
-    align-items: center;
-  }
-
-  .row.aln-bottom {
-    align-items: flex-end;
-  }
-
-  .row > .imp-xlarge {
-    order: -1;
-  }
-
-  .row > .col-1-xlarge {
-    width: 8.33333%;
-  }
-
-  .row > .off-1-xlarge {
-    margin-left: 8.33333%;
-  }
-
-  .row > .col-2-xlarge {
-    width: 16.66667%;
-  }
-
-  .row > .off-2-xlarge {
-    margin-left: 16.66667%;
-  }
-
-  .row > .col-3-xlarge {
-    width: 25%;
-  }
-
-  .row > .off-3-xlarge {
-    margin-left: 25%;
-  }
-
-  .row > .col-4-xlarge {
-    width: 33.33333%;
-  }
-
-  .row > .off-4-xlarge {
-    margin-left: 33.33333%;
-  }
-
-  .row > .col-5-xlarge {
-    width: 41.66667%;
-  }
-
-  .row > .off-5-xlarge {
-    margin-left: 41.66667%;
-  }
-
-  .row > .col-6-xlarge {
-    width: 50%;
-  }
-
-  .row > .off-6-xlarge {
-    margin-left: 50%;
-  }
-
-  .row > .col-7-xlarge {
-    width: 58.33333%;
-  }
-
-  .row > .off-7-xlarge {
-    margin-left: 58.33333%;
-  }
-
-  .row > .col-8-xlarge {
-    width: 66.66667%;
-  }
-
-  .row > .off-8-xlarge {
-    margin-left: 66.66667%;
-  }
-
-  .row > .col-9-xlarge {
-    width: 75%;
-  }
-
-  .row > .off-9-xlarge {
-    margin-left: 75%;
-  }
-
-  .row > .col-10-xlarge {
-    width: 83.33333%;
-  }
-
-  .row > .off-10-xlarge {
-    margin-left: 83.33333%;
-  }
-
-  .row > .col-11-xlarge {
-    width: 91.66667%;
-  }
-
-  .row > .off-11-xlarge {
-    margin-left: 91.66667%;
-  }
-
-  .row > .col-12-xlarge {
-    width: 100%;
-  }
-
-  .row > .off-12-xlarge {
-    margin-left: 100%;
-  }
-
-  .row.gtr-0 {
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-
-  .row.gtr-0 > * {
-    padding: 0px 0 0 0px;
-  }
-
-  .row.gtr-0.gtr-uniform {
-    margin-top: 0px;
-  }
-
-  .row.gtr-0.gtr-uniform > * {
-    padding-top: 0px;
-  }
-
-  .row.gtr-25 {
-    margin-top: -12.5px;
-    margin-left: -12.5px;
-  }
-
-  .row.gtr-25 > * {
-    padding: 12.5px 0 0 12.5px;
-  }
-
-  .row.gtr-25.gtr-uniform {
-    margin-top: -12.5px;
-  }
-
-  .row.gtr-25.gtr-uniform > * {
-    padding-top: 12.5px;
-  }
-
-  .row.gtr-50 {
-    margin-top: -25px;
-    margin-left: -25px;
-  }
-
-  .row.gtr-50 > * {
-    padding: 25px 0 0 25px;
-  }
-
-  .row.gtr-50.gtr-uniform {
-    margin-top: -25px;
-  }
-
-  .row.gtr-50.gtr-uniform > * {
-    padding-top: 25px;
-  }
-
-  .row {
-    margin-top: -50px;
-    margin-left: -50px;
-  }
-
-  .row > * {
-    padding: 50px 0 0 50px;
-  }
-
-  .row.gtr-uniform {
-    margin-top: -50px;
-  }
-
-  .row.gtr-uniform > * {
-    padding-top: 50px;
-  }
-
-  .row.gtr-150 {
-    margin-top: -75px;
-    margin-left: -75px;
-  }
-
-  .row.gtr-150 > * {
-    padding: 75px 0 0 75px;
-  }
-
-  .row.gtr-150.gtr-uniform {
-    margin-top: -75px;
-  }
-
-  .row.gtr-150.gtr-uniform > * {
-    padding-top: 75px;
-  }
-
-  .row.gtr-200 {
-    margin-top: -100px;
-    margin-left: -100px;
-  }
-
-  .row.gtr-200 > * {
-    padding: 100px 0 0 100px;
-  }
-
-  .row.gtr-200.gtr-uniform {
-    margin-top: -100px;
-  }
-
-  .row.gtr-200.gtr-uniform > * {
-    padding-top: 100px;
-  }
-}
-
-@media screen and (max-width: 1280px) {
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    align-items: stretch;
-  }
-
-  .row > * {
-    box-sizing: border-box;
-  }
-
-  .row.gtr-uniform > * > :last-child {
-    margin-bottom: 0;
-  }
-
-  .row.aln-left {
-    justify-content: flex-start;
-  }
-
-  .row.aln-center {
-    justify-content: center;
-  }
-
-  .row.aln-right {
-    justify-content: flex-end;
-  }
-
-  .row.aln-top {
-    align-items: flex-start;
-  }
-
-  .row.aln-middle {
-    align-items: center;
-  }
-
-  .row.aln-bottom {
-    align-items: flex-end;
-  }
-
-  .row > .imp-large {
-    order: -1;
-  }
-
-  .row > .col-1-large {
-    width: 8.33333%;
-  }
-
-  .row > .off-1-large {
-    margin-left: 8.33333%;
-  }
-
-  .row > .col-2-large {
-    width: 16.66667%;
-  }
-
-  .row > .off-2-large {
-    margin-left: 16.66667%;
-  }
-
-  .row > .col-3-large {
-    width: 25%;
-  }
-
-  .row > .off-3-large {
-    margin-left: 25%;
-  }
-
-  .row > .col-4-large {
-    width: 33.33333%;
-  }
-
-  .row > .off-4-large {
-    margin-left: 33.33333%;
-  }
-
-  .row > .col-5-large {
-    width: 41.66667%;
-  }
-
-  .row > .off-5-large {
-    margin-left: 41.66667%;
-  }
-
-  .row > .col-6-large {
-    width: 50%;
-  }
-
-  .row > .off-6-large {
-    margin-left: 50%;
-  }
-
-  .row > .col-7-large {
-    width: 58.33333%;
-  }
-
-  .row > .off-7-large {
-    margin-left: 58.33333%;
-  }
-
-  .row > .col-8-large {
-    width: 66.66667%;
-  }
-
-  .row > .off-8-large {
-    margin-left: 66.66667%;
-  }
-
-  .row > .col-9-large {
-    width: 75%;
-  }
-
-  .row > .off-9-large {
-    margin-left: 75%;
-  }
-
-  .row > .col-10-large {
-    width: 83.33333%;
-  }
-
-  .row > .off-10-large {
-    margin-left: 83.33333%;
-  }
-
-  .row > .col-11-large {
-    width: 91.66667%;
-  }
-
-  .row > .off-11-large {
-    margin-left: 91.66667%;
-  }
-
-  .row > .col-12-large {
-    width: 100%;
-  }
-
-  .row > .off-12-large {
-    margin-left: 100%;
-  }
-
-  .row.gtr-0 {
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-
-  .row.gtr-0 > * {
-    padding: 0px 0 0 0px;
-  }
-
-  .row.gtr-0.gtr-uniform {
-    margin-top: 0px;
-  }
-
-  .row.gtr-0.gtr-uniform > * {
-    padding-top: 0px;
-  }
-
-  .row.gtr-25 {
-    margin-top: -8.75px;
-    margin-left: -8.75px;
-  }
-
-  .row.gtr-25 > * {
-    padding: 8.75px 0 0 8.75px;
-  }
-
-  .row.gtr-25.gtr-uniform {
-    margin-top: -8.75px;
-  }
-
-  .row.gtr-25.gtr-uniform > * {
-    padding-top: 8.75px;
-  }
-
-  .row.gtr-50 {
-    margin-top: -17.5px;
-    margin-left: -17.5px;
-  }
-
-  .row.gtr-50 > * {
-    padding: 17.5px 0 0 17.5px;
-  }
-
-  .row.gtr-50.gtr-uniform {
-    margin-top: -17.5px;
-  }
-
-  .row.gtr-50.gtr-uniform > * {
-    padding-top: 17.5px;
-  }
-
-  .row {
-    margin-top: -35px;
-    margin-left: -35px;
-  }
-
-  .row > * {
-    padding: 35px 0 0 35px;
-  }
-
-  .row.gtr-uniform {
-    margin-top: -35px;
-  }
-
-  .row.gtr-uniform > * {
-    padding-top: 35px;
-  }
-
-  .row.gtr-150 {
-    margin-top: -52.5px;
-    margin-left: -52.5px;
-  }
-
-  .row.gtr-150 > * {
-    padding: 52.5px 0 0 52.5px;
-  }
-
-  .row.gtr-150.gtr-uniform {
-    margin-top: -52.5px;
-  }
-
-  .row.gtr-150.gtr-uniform > * {
-    padding-top: 52.5px;
-  }
-
-  .row.gtr-200 {
-    margin-top: -70px;
-    margin-left: -70px;
-  }
-
-  .row.gtr-200 > * {
-    padding: 70px 0 0 70px;
-  }
-
-  .row.gtr-200.gtr-uniform {
-    margin-top: -70px;
-  }
-
-  .row.gtr-200.gtr-uniform > * {
-    padding-top: 70px;
-  }
-}
-
-@media screen and (max-width: 980px) {
-}
-
-@media screen and (max-width: 736px) {
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    align-items: stretch;
-  }
-
-  .row > * {
-    box-sizing: border-box;
-  }
-
-  .row.gtr-uniform > * > :last-child {
-    margin-bottom: 0;
-  }
-
-  .row.aln-left {
-    justify-content: flex-start;
-  }
-
-  .row.aln-center {
-    justify-content: center;
-  }
-
-  .row.aln-right {
-    justify-content: flex-end;
-  }
-
-  .row.aln-top {
-    align-items: flex-start;
-  }
-
-  .row.aln-middle {
-    align-items: center;
-  }
-
-  .row.aln-bottom {
-    align-items: flex-end;
-  }
-
-  .row > .imp-small {
-    order: -1;
-  }
-
-  .row > .col-1-small {
-    width: 8.33333%;
-  }
-
-  .row > .off-1-small {
-    margin-left: 8.33333%;
-  }
-
-  .row > .col-2-small {
-    width: 16.66667%;
-  }
-
-  .row > .off-2-small {
-    margin-left: 16.66667%;
-  }
-
-  .row > .col-3-small {
-    width: 25%;
-  }
-
-  .row > .off-3-small {
-    margin-left: 25%;
-  }
-
-  .row > .col-4-small {
-    width: 33.33333%;
-  }
-
-  .row > .off-4-small {
-    margin-left: 33.33333%;
-  }
-
-  .row > .col-5-small {
-    width: 41.66667%;
-  }
-
-  .row > .off-5-small {
-    margin-left: 41.66667%;
-  }
-
-  .row > .col-6-small {
-    width: 50%;
-  }
-
-  .row > .off-6-small {
-    margin-left: 50%;
-  }
-
-  .row > .col-7-small {
-    width: 58.33333%;
-  }
-
-  .row > .off-7-small {
-    margin-left: 58.33333%;
-  }
-
-  .row > .col-8-small {
-    width: 66.66667%;
-  }
-
-  .row > .off-8-small {
-    margin-left: 66.66667%;
-  }
-
-  .row > .col-9-small {
-    width: 75%;
-  }
-
-  .row > .off-9-small {
-    margin-left: 75%;
-  }
-
-  .row > .col-10-small {
-    width: 83.33333%;
-  }
-
-  .row > .off-10-small {
-    margin-left: 83.33333%;
-  }
-
-  .row > .col-11-small {
-    width: 91.66667%;
-  }
-
-  .row > .off-11-small {
-    margin-left: 91.66667%;
-  }
-
-  .row > .col-12-small {
-    width: 100%;
-  }
-
-  .row > .off-12-small {
-    margin-left: 100%;
-  }
-
-  .row.gtr-0 {
-    margin-top: 0px;
-    margin-left: 0px;
-  }
-
-  .row.gtr-0 > * {
-    padding: 0px 0 0 0px;
-  }
-
-  .row.gtr-0.gtr-uniform {
-    margin-top: 0px;
-  }
-
-  .row.gtr-0.gtr-uniform > * {
-    padding-top: 0px;
-  }
-
-  .row.gtr-25 {
-    margin-top: -7.5px;
-    margin-left: -7.5px;
-  }
-
-  .row.gtr-25 > * {
-    padding: 7.5px 0 0 7.5px;
-  }
-
-  .row.gtr-25.gtr-uniform {
-    margin-top: -7.5px;
-  }
-
-  .row.gtr-25.gtr-uniform > * {
-    padding-top: 7.5px;
-  }
-
-  .row.gtr-50 {
-    margin-top: -15px;
-    margin-left: -15px;
-  }
-
-  .row.gtr-50 > * {
-    padding: 15px 0 0 15px;
-  }
-
-  .row.gtr-50.gtr-uniform {
-    margin-top: -15px;
-  }
-
-  .row.gtr-50.gtr-uniform > * {
-    padding-top: 15px;
-  }
-
-  .row {
-    margin-top: -30px;
-    margin-left: -30px;
-  }
-
-  .row > * {
-    padding: 30px 0 0 30px;
-  }
-
-  .row.gtr-uniform {
-    margin-top: -30px;
-  }
-
-  .row.gtr-uniform > * {
-    padding-top: 30px;
-  }
-
-  .row.gtr-150 {
-    margin-top: -45px;
-    margin-left: -45px;
-  }
-
-  .row.gtr-150 > * {
-    padding: 45px 0 0 45px;
-  }
-
-  .row.gtr-150.gtr-uniform {
-    margin-top: -45px;
-  }
-
-  .row.gtr-150.gtr-uniform > * {
-    padding-top: 45px;
-  }
-
-  .row.gtr-200 {
-    margin-top: -60px;
-    margin-left: -60px;
-  }
-
-  .row.gtr-200 > * {
-    padding: 60px 0 0 60px;
-  }
-
-  .row.gtr-200.gtr-uniform {
-    margin-top: -60px;
-  }
-
-  .row.gtr-200.gtr-uniform > * {
-    padding-top: 60px;
-  }
-}
-
 /* Section/Article */
 
 section,
-article {
-  margin: 0 0 4em 0;
-}
-
 section > :last-child,
 article > :last-child,
 section:last-child,
 article:last-child {
   margin-bottom: 0;
-}
-
-header.style1 {
-  text-align: center;
-}
-
-header.style1 h2 {
-  font-weight: 700;
-  font-size: 2em;
-  letter-spacing: 0.075em;
-  line-height: 1.5em;
-}
-
-header.style1 p {
-  color: #b1b4b9;
-  display: block;
-  margin: 1.15em 0 0 0;
-  font-size: 1.3em;
-  letter-spacing: 0.075em;
-  line-height: 1.5em;
-}
-
-/* Table */
-
-table {
-  width: 100%;
-}
-
-table.default {
-  width: 100%;
-}
-
-table.default tbody tr:nth-child(2n + 2) {
-  background: #f4f4f4;
-}
-
-table.default td {
-  padding: 0.5em 1em 0.5em 1em;
-}
-
-table.default th {
-  text-align: left;
-  font-weight: 400;
-  padding: 0.5em 1em 0.5em 1em;
-}
-
-table.default thead {
-  background: #484d55;
-  color: #fff;
-}
-
-table.default tfoot {
-  background: #eee;
 }
 
 /* Button */
