--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 @import url("menu.css");
 @import url("test.css");
 @import url("note-content.css");
+@import url("full-index.css");
 
 html,
 body,
