--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -24,6 +24,10 @@
   z-index: 5;
 }
 
+.navigation-shadow{
+  box-shadow: 0 2px 8px #f0f1f2;
+}
+
 .navigation-content-unhome {
   color: #262626;
 }
@@ -207,8 +211,9 @@
   }
   .logo {
     position: absolute;
+    left: 50%;
+    margin-left: -20px;
     width: 40px;
-    text-align: center;
     height: 40px;
     line-height: 40px;
     font-size: 30px;
