--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -40,7 +40,8 @@
   text-align: center;
   border-radius: 30px;
   background-image: linear-gradient(
-    -45deg,
+    to right,
+    rgb(166, 99, 230),
     rgb(126, 69, 255, 1),
     rgb(54, 131, 231)
   );
