--- a/assets/css/full-index.css
+++ b/assets/css/full-index.css
@@ -18,6 +18,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   margin: auto;
+  margin-bottom: 20px;
   width: 80%;
 }
 .single-content-title {
@@ -30,12 +31,14 @@
   flex-direction: row;
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+  width: 200px;
 }
 
 .single-content a {
   font-size: 14px;
   line-height: 20px;
+
   color: #c0c0c0;
 }
 
@@ -43,5 +46,5 @@
   font-size: 17px;
   line-height: 25px;
   color: #afafaf;
-  color: linear-gradient(to right, rgb(222, 120, 252, 1), rgb(126, 69, 255, 1));
+  text-align: center;
 }
