--- a/assets/css/full-index.css
+++ b/assets/css/full-index.css
@@ -16,9 +16,12 @@
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
+  flex-wrap: -webkit-wrap;
   justify-content: space-around;
+  justify-content: -webkit-space-around;
   margin: auto;
-  margin-bottom: 20px;
+  padding-top: 10px;
+  margin-bottom: 30px;
   width: 80%;
 }
 .single-content-title {
@@ -31,15 +34,19 @@
   flex-direction: row;
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 10px;
-  width: 200px;
+  margin-bottom: 15px;
+  width: 250px;
 }
 
 .single-content a {
   font-size: 14px;
-  line-height: 20px;
-
+  line-height: 25px;
   color: #c0c0c0;
+}
+
+.single-content a div{
+  width: 100%;
+  border-bottom: 1px solid #c0c0c0;
 }
 
 .single-content a:nth-of-type(1) {
