--- a/assets/css/full-index.css
+++ b/assets/css/full-index.css
@@ -1,7 +1,7 @@
 .full-index {
   width: 100%;
   height: auto;
-  color: #afafaf;
+  color: #838383;
 }
 
 .full-index-title {
@@ -24,12 +24,14 @@
   margin-bottom: 30px;
   width: 80%;
 }
+
 .single-content-title {
   margin-bottom: 20px;
   width: 100%;
-  border-bottom: 1px solid #c0c0c0;
+  border-bottom: 1px solid #ebebeb;
   text-align: center;
 }
+
 .single-content {
   flex-direction: row;
   margin-left: 20px;
@@ -41,17 +43,23 @@
 .single-content a {
   font-size: 14px;
   line-height: 25px;
-  color: #afafaf;
+  color: #838383;
 }
 
 .single-content a div{
   width: 100%;
-  border-bottom: 0.5px solid #c0c0c0;
+  border-bottom: 0.5px solid #ebebeb;
 }
 
 .single-content a:nth-of-type(1) {
   font-size: 17px;
   line-height: 25px;
-  color: #a3a3a3;
+  color: #838383;
   text-align: center;
+}
+
+@media screen and (min-width:0px) and (max-width:1120px){
+  .single-content a {
+    line-height: 45px;
+  }
 }
