--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -2,10 +2,24 @@
 .news {
   width: 100%;
   height: auto;
+}
+
+.news-purple{
   background-image: linear-gradient(
     to right,
     rgb(222, 120, 252, 1),
     rgb(126, 69, 255, 1)
+  );
+}
+
+.news-golden{
+  background-image: linear-gradient(
+    to right,
+    rgb(243, 229, 200),
+    rgb(160, 136, 94),
+    rgb(80, 64, 38),
+    rgb(163, 143, 108),
+    rgb(243, 229, 200)
   );
 }
 
@@ -22,6 +36,10 @@
   top: 0;
   height: 50px;
   z-index: 5;
+}
+
+.navigation-grey{
+  background-color: rgba(61, 61, 61, 0.5);
 }
 
 .navigation-shadow{
@@ -154,9 +172,7 @@
 .dropdown-line {
   position: relative;
   top: 39px;
-  margin: auto;
   width: 100%;
-
   display: none;
 }
 
@@ -166,6 +182,14 @@
 
 .dropdown-line-black {
   border: 0.9px solid rgb(255, 255, 255);
+}
+
+.dropdown-line-show {
+  position: absolute;
+  top: 49px;
+  width: 100%;
+  border: 0.9px solid rgba(107, 107, 107, 0.479);
+  z-index: 50;
 }
 
 .dropdown-menu hr {
@@ -220,5 +244,8 @@
   }
   .study-logo p{
     display: none;
+  }
+  .dropdown-line-show{
+    top: 39px;
   }
 }
