--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -18,6 +18,7 @@
     rgb(243, 229, 200),
     rgb(139, 118, 81),
     rgb(80, 64, 38),
+    rgb(80, 64, 38),
     rgb(160, 136, 95),
     rgb(243, 229, 200)
   );
