--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -1,26 +1,25 @@
 .right-content {
-  padding-left: 16%;
+  padding-left: 280px;
   z-index: -1;
 }
 
 .content-content {
-  padding-left: 8%;
-  padding-right: 25%;
-  margin-bottom: 300px;
+  margin-left: 35px;
+  margin-right: 35px;
 }
 
 .right-content h1 {
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 50px;
-  /* text-align: center; */
-  font-size: 35px;
+  font-size: 33px;
   color: #40a9ff;
 }
 
 .right-content h2 {
   margin-top: 20px;
   margin-bottom: 20px;
-  font-size: 27px;
+  font-size: 25px;
+  line-height: 27px;
   color: #40a9ff;
 }
 
@@ -68,12 +67,8 @@
   color: #40a9ff;
 }
 
-@media screen and (min-width: 0px) and (max-width: 1024px) {
+@media screen and (min-width: 0px) and (max-width: 1120px) {
   .right-content {
-    padding-left: 0%;
-  }
-
-  .content-content {
-    padding-right: 8%;
+    padding-left: 0px;
   }
 }
