--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -44,7 +44,7 @@
 }
 
 .navigation-shadow {
-  box-shadow: 0 2px 8px #f0f1f2;
+  box-shadow: 0 2px 8px rgba(189, 189, 189, 0.2);
 }
 
 .navigation-content-unhome {
