--- a/assets/css/full-index.css
+++ b/assets/css/full-index.css
@@ -10,6 +10,7 @@
   width: 100%;
   text-align: center;
   font-size: 22px;
+  color: #a26aec;
 }
 
 .full-index-content {
@@ -31,6 +32,7 @@
   border-bottom: 1px solid #ebebeb;
   text-align: center;
   font-size: 17px;
+  color: #ac6dfd;
 }
 
 .single-content {
@@ -38,12 +40,12 @@
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
-  width: 170px;
+  width: auto;
 }
 
 .single-content a {
   font-size: 14px;
-  line-height: 25px;
+  line-height: 28px;
   color: #838383;
 }
 
@@ -54,13 +56,14 @@
 
 .single-content a:nth-of-type(1) {
   font-size: 15px;
+  font-weight: 500;
   line-height: 25px;
-  color: #838383;
+  color: #757575;
   text-align: center;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1120px) {
   .single-content a {
-    line-height: 45px;
+    line-height: 55px;
   }
 }
