--- a/assets/css/full-index.css
+++ b/assets/css/full-index.css
@@ -55,7 +55,7 @@
 }
 
 .single-content a:nth-of-type(1) {
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 25px;
   color: #757575;
@@ -65,5 +65,10 @@
 @media screen and (min-width: 0px) and (max-width: 1120px) {
   .single-content a {
     line-height: 55px;
+  }
+  .single-content {
+
+    margin-bottom: 50px;
+
   }
 }
