--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -205,6 +205,8 @@
   font-weight: 410;
   font-size: 18px;
   margin: 0;
+  height: 20px;
+  line-height: 20px;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1450px) {
