--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,11 +1,12 @@
 .inner-header-icon {
+  position: absolute;
+  top: 0px;
+  right: 5px;
   display: none;
   height: 40px;
   font-size: 25px;
   text-align: center;
-  float: right;
   width: 40px;
-  position: relative;
   cursor: pointer;
 }
 
@@ -96,7 +97,7 @@
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 1120px) {
+@media screen and (min-width: 0px) and (max-width: 900px) {
   .inner-header-icon {
     display: inline;
   }
