--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -1,5 +1,6 @@
 .home-ins {
   position: relative;
+
   top: -50px;
   z-index: -1;
 }
@@ -15,84 +16,30 @@
 .ins-content {
   margin: auto;
   padding-top: 160px;
-  width: 70%;
-}
-
-.ins-left {
-  width: 50%;
-}
-
-/* 最新消息 */
-.ins-news {
-  width: 370px;
-  height: 50px;
-  line-height: 50px;
-  background: rgba(51, 122, 183, 0.3);
-  border-radius: 30px;
-}
-
-.ins-news-logo {
-  margin-left: 18px;
-  margin-right: 10px;
-  margin-top: 12.5px;
-  margin-bottom: 12.5px;
-  width: 50px;
-  height: 25px;
-  line-height: 25px;
-  text-align: center;
-  border-radius: 30px;
-  background-image: linear-gradient(
-    to right,
-    rgb(166, 99, 230),
-    rgb(126, 69, 255, 1),
-    rgb(54, 131, 231)
-  );
-  float: left;
-}
-
-.ins-news-title {
-  margin: 0;
-  width: 260px;
-  float: left;
-}
-
-.ins-arrow {
-  margin-top: 17px;
-  margin-bottom: 17px;
-  margin-right: 10px;
-  width: 20px;
-  height: 20px;
-  background: url("../img/arrow.svg") no-repeat center center;
-  float: right;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 200px;
+  width: 100%;
 }
 
 .ins-title {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  width: 400px;
-  line-height: 40px;
-  font-size: xx-large;
+  margin-top: 40px;
+  width: 100%;
+  text-align: center;
+  line-height: 60px;
+  font-size: 43px;
 }
 
 .ins-ins {
-  width: 600px;
-}
-
-@media screen and (min-width: 0px) and (max-width: 1450px) {
-  .ins-content {
-    width: 90%;
-  }
+  margin: auto;
+  margin-top: 30px;
+  width: 670px;
+  font-size: 15px;
 }
 
 @media screen and (min-width: 0px) and (max-width: 650px) {
   .ins-ins {
     width: 380px;
-  }
-}
-
-@media screen and (min-width: 0px) and (max-width: 430px) {
-  .ins-title {
-    width: 300px;
   }
 }
 
