--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,9 +5,9 @@
 @import url("right-content.css");
 @import url("font.css");
 @import url("menu.css");
-@import url("test.css");
 @import url("note-content.css");
 @import url("full-index.css");
+@import url("bar.css");
 
 html,
 body,
