--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -6,7 +6,6 @@
   justify-content: space-between;
   justify-content: -webkit-space-around;
   position: relative;
-  top: -40px;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -19,19 +18,19 @@
 }
 
 .first-single-bar {
-  background: #111;
+  background-color: rgb(247, 247, 247);
 }
 
 .second-single-bar {
-  background: #111;
+  background-color: rgb(247, 247, 247);
 }
 
 .third-single-bar {
-  background: #111;
+  background-color: rgb(247, 247, 247);
 }
 
 .fourth-single-bar {
-  background: #111;
+  background-color: rgb(20, 20, 20);
 }
 
 @media screen and (min-width: 0px) and (max-width: 650px) {
