--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -13,24 +13,36 @@
 .single-bar {
   flex-direction: row;
   margin-bottom: 10px;
-  height: 600px;
+  height: 500px;
   width: calc(50% - 5px);
 }
 
 .first-single-bar {
-  background-color: rgb(247, 247, 247);
+  background-color: rgba(247, 247, 247, 0.205);
 }
 
 .second-single-bar {
-  background-color: rgb(247, 247, 247);
+  background-color: rgba(247, 247, 247, 0.205);
 }
 
 .third-single-bar {
-  background-color: rgb(247, 247, 247);
+  background-color: rgba(247, 247, 247, 0.205);
 }
 
 .fourth-single-bar {
-  background-color: rgb(20, 20, 20);
+  background-color: rgba(20, 20, 20, 0.952);
+}
+
+.single-bar-back {
+  margin-left: 20px;
+  margin-top: 50px;
+  font-size: 70px;
+  font-weight: 600;
+  color: rgb(240, 240, 240);
+}
+
+.single-bar-dark{
+    color: black;
 }
 
 @media screen and (min-width: 0px) and (max-width: 650px) {
