--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -13,7 +13,7 @@
   padding-right: 10px;
   padding-bottom: 100px;
   width: 100%;
-  background-color: rgb(247, 247, 247);
+  background-color: rgba(247, 247, 247, 0.205);
 }
 
 .ins-title {
