--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -3,7 +3,7 @@
 }
 
 .home-ins-other {
-  background-color: black;
+  background-color: rgb(32, 32, 32);
 }
 
 .ins-content {
@@ -13,15 +13,14 @@
   padding-right: 10px;
   padding-bottom: 100px;
   width: 100%;
-  background-color: rgba(247, 247, 247, 0.205);
 }
 
 .ins-title {
-  margin-top: 30px;
   width: 100%;
   text-align: center;
   line-height: 60px;
-  font-size: 32px;
+  font-size: 40px;
+  font-weight: 450;
   color: rgb(43, 43, 43);
 }
 
