--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -25,8 +25,8 @@
 }
 
 .ins-ins {
-  margin: auto;
   margin-top: 20px;
+  margin-bottom: 100px;
   padding-left: 10px;
   padding-right: 10px;
   width: 100%;
@@ -36,7 +36,6 @@
 }
 
 .ins-link {
-  margin-top: 100px;
   height: 30px;
   width: 100%;
   text-align: center;
