--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -2,6 +2,18 @@
   margin-bottom: 10px;
 }
 
+.home-ins-blue {
+  background-image: linear-gradient(
+    130deg,
+    rgb(120, 221, 252),
+    rgb(35, 171, 255),
+    rgb(35, 171, 255),
+    rgb(0, 128, 255),
+    rgb(128, 69, 255)
+  );
+  /* background: linear-gradient(-200deg, #783bd3, rgb(37, 188, 223) 100%); */
+}
+
 .home-ins-other {
   background-color: rgb(32, 32, 32);
 }
@@ -19,9 +31,8 @@
   width: 100%;
   text-align: center;
   line-height: 60px;
-  font-size: 32px;
+  font-size: 40px;
   font-weight: 450;
-  color: rgb(65, 65, 65);
 }
 
 .ins-ins {
@@ -32,12 +43,16 @@
   width: 100%;
   text-align: center;
   font-size: 15px;
-  color: rgb(82, 82, 82);
 }
 
 .ins-link {
   height: 30px;
   width: 100%;
   text-align: center;
-  color: rgb(59, 111, 255);
+}
+
+@media screen and (min-width: 0) and (max-width: 600px) {
+  .ins-title {
+    font-size: 32px;
+  }
 }
