--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -240,8 +240,7 @@
     display: none;
   }
   .logo {
-    position: absolute;
-    width: 100%;
+    margin: auto;
     text-align: center;
     font-size: 30px;
   }
