--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -13,7 +13,7 @@
 .single-bar {
   flex-direction: row;
   margin-bottom: 10px;
-  height: 600px;
+  height: 630px;
   width: calc(50% - 5px);
 }
 
@@ -42,7 +42,7 @@
 }
 
 .single-bar-dark {
-  color: black;
+  color: rgb(15, 15, 15);
 }
 
 .single-bar-content {
