--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -13,7 +13,7 @@
 .single-bar {
   flex-direction: row;
   margin-bottom: 10px;
-  height: 630px;
+  height: 620px;
   width: calc(50% - 5px);
 }
 
@@ -52,16 +52,17 @@
   padding-left: 20px;
 }
 
-.single-bar-content-dark{
+.single-bar-content-dark {
   color: #424242;
 }
 
-.single-bar-content-light{
+.single-bar-content-light {
   color: #fafafa;
 }
 
-.single-bar-content p:nth-of-type(1){
-  font-size: 28px; font-weight: 500
+.single-bar-content p:nth-of-type(1) {
+  font-size: 28px;
+  font-weight: 500;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1000px) {
