--- a/assets/css/full-index.css
+++ b/assets/css/full-index.css
@@ -1,3 +1,9 @@
+.notes-navigate{
+  width: 100%;
+  height: 80px;
+  background-color: rgb(248, 248, 248);
+}
+
 .full-index {
   width: 100%;
   height: auto;
