--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -6,9 +6,18 @@
   padding-right: 10px;
 }
 
+.project-year {
+  font-family: monospace;
+  width: 100%;
+  text-align: center;
+  font-size: 25px;
+  margin-top: 40px;
+  color: rgb(243, 229, 200);
+}
+
 .single-project {
   margin-top: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   display: -webkit-flex;
   display: flex;
   flex-wrap: nowrap;
@@ -47,7 +56,7 @@
 .timeline {
   flex-direction: row;
   margin: auto;
-  margin-left: 0;
+  margin-left: 10px;
   margin-right: 15px;
   float: left;
 }
