--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -6,6 +6,29 @@
   padding-right: 10px;
 }
 
+.project-nav {
+  padding-top: 70px;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-wrap: -webkit-nowrap;
+  justify-content: center;
+  justify-content: -webkit-center;
+}
+
+.project-label {
+  flex-direction: row;
+  width: 150px;
+  text-align: center;
+  font-family: monospace;
+  color: rgb(163, 141, 100);
+  font-size: 18px;
+}
+
+.project-label-underline{
+  border-bottom: 1px solid rgb(173, 151, 111);
+}
+
 .project-year {
   font-family: monospace;
   width: 100%;
@@ -45,7 +68,7 @@
 
 .single-project-content-title {
   margin-bottom: 5px;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 600;
 }
 
