--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -61,9 +61,12 @@
   flex-direction: row;
   padding-right: 10px;
   padding-left: 10px;
-  width: 600px;
   display: flex;
   align-items: center;
+}
+
+.single-project-content-width{
+  width: 640px;
 }
 
 .single-project-content-title {
@@ -82,6 +85,10 @@
   margin-left: 10px;
   margin-right: 12px;
   float: left;
+}
+
+.timeline-fiexd{
+  position: fixed;
 }
 
 .ball {
