--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 @import url("sidebar.css");
 @import url("right-content.css");
 @import url("font.css");
-@import url("menu.css");
+@import url("dropdown-ani-button.css");
 @import url("note-content.css");
 @import url("full-index.css");
 @import url("bar.css");
